feat: config 파일 및 코드 생성