@@ -1,12 +1,9 @@
-package kr.ac.hansung.cse.hellospringdatajpa.service;
-
 import kr.ac.hansung.cse.hellospringdatajpa.entity.User;
 import kr.ac.hansung.cse.hellospringdatajpa.repo.UserRepository;
 import lombok.RequiredArgsConstructor;
-import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
+import java.util.Set;
 
 @Service
 @RequiredArgsConstructor
@@ -19,7 +16,7 @@ public class UserService {
         User user = User.builder()
                 .email(email)
                 .password(passwordEncoder.encode(password))
-                .roles(Collections.singleton("ROLE_USER"))
+                .roles(Set.of("ROLE_USER"))
                 .build();
         userRepository.save(user);
     }
